z-index fix for context menus

--- a/woost/admin/ui/resources/styles/woost-admin-ui-contextmenusource.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-contextmenusource.scss
@@ -4,7 +4,7 @@
 }
 
 .ContextMenu {
-    z-index: 1;
+    z-index: 3;
     position: absolute;
     height: 0;
     overflow: hidden;
